--- a/services/service_provider/package.json
+++ b/services/service_provider/package.json
@@ -75,7 +75,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: Run npm test in the services directory.\" && exit 1"
   },
   "keywords": [],
   "author": "",
