--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: services
+        working-directory: ./services
 
     strategy:
       matrix:
