cd services instead of default directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ./services
+    # defaults:
+    #   run:
+    #     working-directory: ./services
 
     strategy:
       matrix:
@@ -30,6 +30,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: |
+        cd services
+        npm ci
+    - run: |
+        cd services
+        npm run build --if-present
+    - run: |
+        cd services
+        npm test
