--- a/services/package.json
+++ b/services/package.json
@@ -7,14 +7,22 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint **/*.ts",
+    "lint:fix": "eslint **/*.ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.5"
+    "ts-jest": "^29.1.5",
+    "typescript-eslint": "^7.13.1"
   }
 }
