--- a/services/package.json
+++ b/services/package.json
@@ -7,14 +7,21 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.5"
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1"
   }
 }
