--- a/services/service_provider/package.json
+++ b/services/service_provider/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/express": "^4.17.21",
+    "@types/figlet": "^1.5.8",
     "@types/node": "^20.14.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -30,6 +32,7 @@
     "es-errors": "^1.3.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
+    "figlet": "^1.7.0",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
