Default props will be deprecated in major release - remove related linting warning.

--- a/app/identity_holder/.eslintrc
+++ b/app/identity_holder/.eslintrc
@@ -34,7 +34,8 @@
           "unnamedComponents": "arrow-function"
         }
       ],
-      "react/react-in-jsx-scope": "off"
+      "react/react-in-jsx-scope": "off",
+      "react/require-default-props": "off"
     },
     "settings": {
         "react-native": {
