--- a/services/identity_holder/package.json
+++ b/services/identity_holder/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "typescript": "^5.4.5"
@@ -13,6 +14,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
@@ -72,6 +74,7 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid": "^10.0.0",
     "vary": "^1.1.2"
   },
   "scripts": {
