--- a/services/identity_holder/package.json
+++ b/services/identity_holder/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
     "@types/uuid": "^10.0.0",
