--- a/services/identity_holder/package.json
+++ b/services/identity_holder/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
@@ -15,6 +16,7 @@
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
