--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -7,12 +7,16 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "^51.0.0",
+    "expo-local-authentication": "~14.0.1",
+    "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-local-authentication": "^0.1.1",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
