--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -8,6 +8,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.0",
     "expo-local-authentication": "~14.0.1",
     "expo-status-bar": "~1.12.1",
