--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-local-authentication": "^0.1.1",
+    "react-native-maps": "1.14.0",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
