--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -20,6 +20,7 @@
     "react-native-local-authentication": "^0.1.1",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "^3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-vector-icons": "^10.1.0",
