--- a/app/identity_holder/app.json
+++ b/app/identity_holder/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "blank",
-    "slug": "blank",
+    "name": "Identity Holder Wallet",
+    "slug": "identity-holder-wallet",
     "version": "1.0.0",
     "platforms": [
       "ios",
