--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.2",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-local-authentication": "^0.1.1",
     "react-native-maps": "1.14.0",
@@ -35,7 +36,7 @@
     "globals": "^15.6.0"
   },
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --port 8082",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
