Update packages and add new script for running the server with a tunnel.

--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -9,9 +9,9 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.0",
+    "expo": "^51.0.17",
     "expo-local-authentication": "~14.0.1",
-    "expo-secure-store": "^13.0.1",
+    "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -39,6 +39,7 @@
   },
   "scripts": {
     "start": "expo start --port 7999",
+    "tunnel": "expo start --tunnel --port 7999",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
