--- a/services/package.json
+++ b/services/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
