--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.3",
+    "react-native-chatbot": "^0.0.1-alpha.12",
     "react-native-dotenv": "^3.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.1",
