--- a/services/service_provider/package.json
+++ b/services/service_provider/package.json
@@ -13,8 +13,11 @@
   "description": "`# Self-Sovereign Identity (Service Provider)\r The Service Provider (SP) is responsible for ensuring that an Identity Holder (IH) is supplying valid credentials.",
   "main": "index.js",
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "axios": "^1.7.2",
+    "bbs": "^0.0.0",
     "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
@@ -75,6 +78,7 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid": "^10.0.0",
     "vary": "^1.1.2"
   },
   "scripts": {
