--- a/services/identity_holder/package.json
+++ b/services/identity_holder/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@digitalbazaar/bbs-signatures": "^2.1.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
@@ -14,6 +15,7 @@
   "description": "`# Self-Sovereign Identity (Identity Holder)\r The Identity Holder (IH) is responsible for storing credentials provided to them by Issuers.\r They are also responsible for",
   "main": "index.js",
   "dependencies": {
+    "@decentralized-identity/ion-tools": "^1.1.4",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "axios": "^1.7.2",
