--- a/services/issuer/package.json
+++ b/services/issuer/package.json
@@ -11,6 +11,8 @@
   "description": "`# Self-Sovereign Identity (Issuer)\r The Issuer is responsible for providing credentials to Identity Holders (IH).",
   "main": "index.js",
   "dependencies": {
+    "@decentralized-identity/ion-tools": "^1.1.4",
+    "@digitalbazaar/bbs-signatures": "^2.1.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "body-parser": "^1.20.2",
