--- a/services/issuer/package.json
+++ b/services/issuer/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@decentralized-identity/ion-tools": "^1.1.4",
     "@digitalbazaar/bbs-signatures": "^2.1.0",
+    "@node-oauth/express-oauth-server": "^4.0.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
+    "commander": "^12.1.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
