finished oauth with partly working bbs

--- a/services/service_provider/Dockerfile
+++ b/services/service_provider/Dockerfile
@@ -12,4 +12,4 @@ FROM base as production
 
 ENV NODE_PATH=./dist
 
-RUN npx ts-node src/index.ts 
+RUN cat credential-data.txt | npx ts-node src/index.ts -f formats.json
