--- a/services/issuer/package.json
+++ b/services/issuer/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@digitalbazaar/bbs-signatures": "^2.1.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
     "dotenv": "^16.4.5",
@@ -12,7 +14,6 @@
   "main": "index.js",
   "dependencies": {
     "@decentralized-identity/ion-tools": "^1.1.4",
-    "@digitalbazaar/bbs-signatures": "^2.1.0",
     "@node-oauth/express-oauth-server": "^4.0.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
@@ -24,6 +25,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
