--- a/services/issuer/package.json
+++ b/services/issuer/package.json
@@ -6,14 +6,17 @@
     "@types/node": "^20.14.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "name": "issuer",
   "version": "1.0.0",
   "description": "`# Self-Sovereign Identity (Issuer)\r The Issuer is responsible for providing credentials to Identity Holders (IH).",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "@decentralized-identity/ion-tools": "^1.1.4",
+    "@inquirer/prompts": "^5.1.2",
     "@node-oauth/express-oauth-server": "^4.0.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
