--- a/services/service_provider/package.json
+++ b/services/service_provider/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@decentralized-identity/ion-tools": "^1.1.4",
+    "@digitalbazaar/bbs-signatures": "^2.1.0",
     "@types/commander": "^2.12.2",
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
