--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@decentralized-identity/ion-tools": "^1.1.4",
+    "@types/axios": "^0.14.0",
+    "@types/uuid": "^10.0.0",
     "expo": "^51.0.14",
     "metro": "^0.80.9"
   }
