--- a/services/identity_holder/package.json
+++ b/services/identity_holder/package.json
@@ -14,6 +14,7 @@
   "description": "`# Self-Sovereign Identity (Identity Holder)\r The Identity Holder (IH) is responsible for storing credentials provided to them by Issuers.\r They are also responsible for",
   "main": "index.js",
   "dependencies": {
+    "@react-native-picker/picker": "^2.7.7",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "axios": "^1.7.2",
