--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -8,7 +8,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.19",
+    "expo": "^51.0.21",
     "expo-local-authentication": "~14.0.1",
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -16,7 +16,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.74.3",
-    "react-native-chatbot": "^0.0.1-alpha.12",
     "react-native-dotenv": "^3.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.1",
@@ -24,7 +23,7 @@
     "react-native-maps": "1.14.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "^3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
