--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@expo/html-elements": "^0.10.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -9,6 +10,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "expo": "^51.0.21",
+    "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
@@ -17,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-native": "^0.74.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-local-authentication": "^0.1.1",
