expose https port

--- a/services/issuer/Dockerfile
+++ b/services/issuer/Dockerfile
@@ -21,4 +21,5 @@ COPY --chown=bun:bun --from=prerelease /usr/app .
 # run the app
 USER bun
 EXPOSE 8082/tcp
+EXPOSE 88443/tcp
 ENTRYPOINT [ "bun", "run", "./src/index.ts" ]
