--- a/services/service_provider/docker-compose.yml
+++ b/services/service_provider/docker-compose.yml
@@ -1,16 +1,14 @@
 version: '3.7'
-
 services:
-  ts-node-docker:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
-      target: base
+      target: release
     volumes:
-      - ./src:/home/node/app/src
+      - .:/usr/app
     container_name: service_provider
     expose:
-      - '8081'
+      - '8083'
     ports:
-      - '8081:8081'
-    command: npx ts-node src/index.ts
+      - '8083:8083'
