try isolate node modules

--- a/services/service_provider/docker-compose.yml
+++ b/services/service_provider/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       target: release
     volumes:
       - .:/usr/app
+      - /node_dir/node_modules
     container_name: service_provider
     expose:
       - '8083'
