--- a/services/identity_holder/docker-compose.yml
+++ b/services/identity_holder/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
       target: release
     volumes:
-      - .:/usr/app
+      - ./src:/usr/app/src
     container_name: identity_holder
     expose:
       - '8081'
