--- a/services/issuer/docker-compose.yml
+++ b/services/issuer/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
       target: release
     volumes:
-      - .:/usr/app
+      - ./src:/usr/app/src
     container_name: issuer
     expose:
       - '8082'
