--- a/app/identity_holder/package.json
+++ b/app/identity_holder/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
