--- a/app/issuer/app.json
+++ b/app/issuer/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Identity Holder Wallet",
-    "slug": "identity-holder-wallet",
+    "name": "Issuer",
+    "slug": "issuer",
     "version": "1.0.0",
     "platforms": [
       "ios",
