--- a/app/ServiceProvider/package.json
+++ b/app/ServiceProvider/package.json
@@ -22,7 +22,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-local-authentication": "^0.1.1",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "^1.14.0",
     "react-native-pager-view": "^6.3.0",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "^4.10.1",
