--- a/services/service_provider/package.json
+++ b/services/service_provider/package.json
@@ -9,7 +9,7 @@
   },
   "name": "service_provider",
   "version": "1.0.0",
-  "description": "`# Self-Sovereign Identity (Service Provider)\r The Service Provider (SP) is responsible for ensuring that an Identity Holder (IH) is supplying valid credentials.",
+  "description": "Self-Sovereign Identity (Service Provider)\n The Service Provider (SP) is responsible for ensuring that an Identity Holder (IH) is supplying valid credentials.",
   "main": "index.js",
   "dependencies": {
     "@decentralized-identity/ion-tools": "^1.1.4",
