--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2020",          // Specify ECMAScript target
-        "module": "ESNext",          // Specify module code generation
+        "module": "CommonJS",          // Specify module code generation
         "jsx": "react",              // Specify JSX code generation
         "strict": true,              // Enable all strict type-checking options
         "esModuleInterop": true,     // Enables emit interoperability between CommonJS and ES Modules
