qr scanner fully implemented

--- a/app/IdentityOwner/walletapp/app.json
+++ b/app/IdentityOwner/walletapp/app.json
@@ -13,7 +13,10 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app needs access to the camera to scan QR codes."
+      }
     },
     "android": {
       "adaptiveIcon": {
