--- a/app/IdentityOwner/walletapp/package.json
+++ b/app/IdentityOwner/walletapp/package.json
@@ -18,8 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.37",
     "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -36,8 +38,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.10",
-    "react-webcam": "^7.2.0",
-    "expo-camera": "~15.0.16"
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
