--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "@types/axios": "^0.14.0",
     "@types/uuid": "^10.0.0",
     "expo": "^51.0.14",
+    "express": "^4.21.1",
     "metro": "^0.80.9"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.7"
   }
 }
