--- a/services/service_provider/package.json
+++ b/services/service_provider/package.json
@@ -1,21 +1,20 @@
 {
   "devDependencies": {
     "@types/commander": "^2.12.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.14.5",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.4.5"
   },
-  "name": "service_provider",
+  "name": "@backend/service_provider",
   "version": "1.0.0",
   "description": "Self-Sovereign Identity (Service Provider)\n The Service Provider (SP) is responsible for ensuring that an Identity Holder (IH) is supplying valid credentials.",
   "main": "index.js",
   "dependencies": {
     "@decentralized-identity/ion-tools": "^1.1.4",
     "@digitalbazaar/bbs-signatures": "^2.1.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "axios": "^1.7.2",
@@ -27,16 +26,19 @@
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.4.5",
     "ee-first": "^1.1.1",
     "encodeurl": "^1.0.2",
     "es-define-property": "^1.0.0",
     "es-errors": "^1.3.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
+    "express": "^4.19.2",
     "figlet": "^1.7.0",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
@@ -85,7 +87,7 @@
   },
   "scripts": {
     "test": "echo \"Error: Run npm test in the services directory.\" && exit 1",
-    "start": "ts-node src/index.ts" 
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
