--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "@types/axios": "^0.14.0",
     "@types/uuid": "^10.0.0",
     "expo": "^51.0.14",
-    "metro": "^0.80.9"
+    "metro": "^0.80.9",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.4",
+    "typescript": "^5.6.3"
   }
 }
