dependencies saved that were already in use

--- a/services/package.json
+++ b/services/package.json
@@ -19,6 +19,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.57.0",
