--- a/app/ServiceProvider/UNSW-employer/src/config.json
+++ b/app/ServiceProvider/UNSW-employer/src/config.json
@@ -1,4 +1,6 @@
 {
-  "credential_endpoint": "http://192.168.0.251:8081/access",
-  "wallet": "http://localhost:8083"
+  "credential_endpoint": "http://192.168.0.102:8081/(auth)/sign-in",
+  "wallet_url": "http://host.docker.internal:8081",
+  "issuer_url": "http://localhost:8082",
+  "verifier_url": "http://host.docker.internal:8083"
 }
