--- a/services/identity_holder/package.json
+++ b/services/identity_holder/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
     "@types/uuid": "^10.0.0",
@@ -12,9 +13,9 @@
   "description": "`# Self-Sovereign Identity (Identity Holder)\r The Identity Holder (IH) is responsible for storing credentials provided to them by Issuers.\r They are also responsible for",
   "main": "index.js",
   "dependencies": {
-    "@react-native-picker/picker": "^2.7.7",
     "@decentralized-identity/ion-tools": "^1.1.4",
     "@digitalbazaar/bbs-signatures": "^2.1.0",
+    "@react-native-picker/picker": "^2.7.7",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "axios": "^1.7.2",
@@ -26,6 +27,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
