--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@
 
 name: Node.js CI
 
-on:
-  push:
-    branches: '**'
-  pull_request:
-    branches: [ "main" ]
+# on:
+#   push:
+#     branches: '**'
+#   pull_request:
+#     branches: [ "main" ]
 
 jobs:
   build:
