--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@types/uuid": "^10.0.0",
     "expo": "^51.0.14",
     "express": "^4.21.1",
-    "metro": "^0.80.9"
+    "metro": "^0.80.9",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
