--- a/app/IdentityIssuer/package.json
+++ b/app/IdentityIssuer/package.json
@@ -9,16 +9,17 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-native": "^0.76.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "switch": "^0.0.0",
@@ -30,12 +31,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -50,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-scripts": "^5.0.1"
   }
 }
