--- a/services/issuer/package.json
+++ b/services/issuer/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
     "@digitalbazaar/bbs-signatures": "^2.1.0",
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.14.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,6 +22,7 @@
     "@node-oauth/express-oauth-server": "^4.0.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
@@ -29,6 +32,7 @@
     "cookie": "^0.6.0",
     "cookie-signature": "^1.0.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
@@ -53,6 +57,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "jsonwebtoken": "^9.0.2",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
@@ -69,6 +74,7 @@
     "qs": "^6.11.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.2",
+    "react-datepicker": "^7.5.0",
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
     "send": "^0.18.0",
@@ -81,6 +87,7 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
+    "uuid": "^11.0.2",
     "vary": "^1.1.2"
   },
   "scripts": {
