housing demo working

--- a/app/IdentityOwner/walletapp/app/config.json
+++ b/app/IdentityOwner/walletapp/app/config.json
@@ -1,5 +1,6 @@
 {
-  "wallet_url": "http://10.0.0.10:8081",
-  "issuer_url": "http://10.0.0.10:8082",
-  "verifier_url": "http://10.0.0.10:8083"
+  "wallet_url": "http://10.0.0.21:8081",
+  "issuer_url": "http://10.0.0.21:8082",
+  "verifier_url": "http://10.0.0.21:8083",
+  "licenseType": "UNSWCredential"
 }
