--- a/app/IdentityOwner/walletapp/app.json
+++ b/app/IdentityOwner/walletapp/app.json
@@ -42,10 +42,12 @@
       }
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "newArchEnabled": true
   }
 }
