--- a/app/ServiceProvider/UNSW-employer/package.json
+++ b/app/ServiceProvider/UNSW-employer/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "fs": "^0.0.1-security",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
