--- a/services/service_provider/src/config.json
+++ b/services/service_provider/src/config.json
@@ -1,16 +1,32 @@
 {
     "definitions": {
-      "housing": {
-        "licenseType": "UNSWCredential",
-        "requiredAttributes": ["zID", "expiryDate"]
-      },
-      "exams": {
-        "licenseType": "UNSWCredential",
-        "requiredAttributes": ["firstName", "zID", "expiryDate"]
-      }
+        "housing": {
+            "licenseType": "UNSWCredential",
+            "requiredAttributes": [
+                "zID",
+                "expiryDate"
+            ]
+        },
+        "exams": {
+            "licenseType": "UNSWCredential",
+            "requiredAttributes": [
+                "firstName",
+                "zID",
+                "expiryDate"
+            ]
+        },
+        "employer": {
+            "licenseType": "UNSWCredential",
+            "requiredAttributes": [
+                "firstName",
+                "lastName",
+                "zID",
+                "expiryDate"
+            ]
+        }
     },
     "wallet_url": "http://10.0.0.21:8081",
     "issuer_url": "http://10.0.0.21:8082",
-    "verifier_url": "http://10.0.0.21:8083"
+    "verifier_url": "http://10.0.0.21:8083",
+    "IPaddress": "10.0.0.21"
 }
-  
